Fix more spacing issues

--- a/style/home/footer.scss
+++ b/style/home/footer.scss
@@ -5,7 +5,7 @@ $footer-height-mobile: 80px;
     height: $footer-height;
     padding: 20px;
     margin: 0;
-    margin-top: 20px;
+    margin-top: auto;
     border-top: $border-inactive;
     background-color: $color-background-grey;
     box-shadow: 0 -6px 10px -6px rgb(0 0 0 / 75%);
