--- a/style/home/projects.scss
+++ b/style/home/projects.scss
@@ -1,6 +1,9 @@
 $width-project-banner: 240px;
 
 #games {
+
+    margin-bottom: 20px;
+
     .col-3 {
         padding-left: 0.5rem;
         padding-right: 0.5rem;
